infra/vaultwarden/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-route
  namespace: vaultwarden
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "vault.monederobox.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vaultwarden
          port: 80
          weight: 1
      sessionPersistence:
        sessionName: vaultwarden-session
        type: Cookie
        absoluteTimeout: 7200s # 2 hours
        cookieConfig:
          lifetimeType: Permanent
---
# SecurityPolicy as it is internal
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: internal-vaultwarden-route
spec:
  targetRefs:
    - group: "gateway.networking.k8s.io"
      name: vaultwarden-route
      kind: HTTPRoute
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 100.64.0.0/10
            - 192.168.1.0/24
